--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,5 @@ install:
 script:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then '../ci/script_linux.sh' ; fi
   - if [ "$TRAVIS_OS_NAME" = "osx"   ]; then '../ci/script_osx.sh'   ; fi
-
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
